--- a/APPLI/OPERATION_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/TABLE.HTML
@@ -11,8 +11,6 @@
             <th>OPERATION NAME</th>
             <th>PRICE</th>
             <th></th>
-            <th></th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -29,7 +27,7 @@
                 <div class="form-group">
                     <div class="btn-group">
                         <div class="btn-group">
-                            <button type="button" class="btn dropdown-toggle input-sm" id="new_operation_categogy" data-toggle="dropdown" aria-expended="false">
+                            <button type="button" class="btn btn-info dropdown-toggle input-sm" id="new_operation_categogy" data-toggle="dropdown" aria-expended="false">
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu" role="menu" name="NEW">
