--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
     <!--LEFT SIDE MENU-->
-    <div class="col-md-3">
+    <div class="">
         <nav class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left " id="cbp-spmenu-s1" style="margin-top:10px;">
 
             <div class="scrollable-menu">
