--- a/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
@@ -1,4 +1,5 @@
 <!--OPERATION LISTS Records-->
+<!--<html>-->
 
 <!--RECORDS-->
 <tr id="edit-row-%2">
@@ -42,15 +43,12 @@
     <!--詳細ボタン-->
     <td>
         <a class="btn btn-success btn-sm" id="OPERATION_DETAIL_%2" onclick="detailOperation(%2); return false;" >DETAIL</a>
-    </td>
     <!--更新ボタン-->
-    <td>
         <a class="btn btn-warning btn-sm" id="OPERATION_EDIT_%2" onclick="editOperation(%2); return false;" >EDIT</a>
-    </td>
     <!--削除ボタン-->
-    <td>
         <a class="btn btn-danger btn-sm" id="OPERATION_DELETE_%2" onclick="deleteOperation(%2); return false;" >DELETE</a>
     </td>
 </tr>
 <!--RECORDS-->
 
+<!--</html>-->
