--- a/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
+++ b/APPLI/STUFF/SIGNIN/HTML/INPUT.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div id="page" class="container fade-in" style="opacity:0">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
 
     <!--Header info-->
@@ -73,7 +73,7 @@
 
     //ロード時に全画面をフェードイン
     $(window).on('load',function(){
-        $('#page').css("opacity","1");
+        $('#whole').css("opacity","1");
     });
 
     //DDO.JP
