--- a/APPLI/OPERATION_LIST/LISTS/HTML/SHOW.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/SHOW.HTML
@@ -177,7 +177,7 @@
         validationErrMsgInit();
 
         $('#REST').val('POST');
-        var new_operation_name = $('#NEW_OPERATION_NAME').val();
+        var new_operation_name = $('#OPERATION_NAME_NEW').val();
         var params = $('form').serialize();
         var jqXHR = $.ajax({
             type: 'POST',
