--- a/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
@@ -63,7 +63,7 @@
                 <div class="col-md-10 col-xs-11">
 	                <span class="text-info h3">###EMAIL###</span>
                 </div>
-                <input type="hidden" name="EMAIL" value="###EMAIL###" />
+                <input type="hidden" name="EMAIL_VAL" value="###EMAIL_VAL###" />
             </div>
 
             <!--TEL1-->
