--- a/APPLI/STUFF/EDIT/HTML/COMPLETE.HTML
+++ b/APPLI/STUFF/EDIT/HTML/COMPLETE.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
        
          <!--Header Info-->
@@ -18,7 +18,23 @@
             </div>
         </div>
         <br>
-         <!--Contents-->
+        <!--Contents-->
+
+        <!--STUFF_ID-->
+	      <div class="row">
+            <div class="col-md-1 hidden-xs">
+                <label class="control-label">
+                    <i class="glyphicon glyphicon-user"></i>
+                </label>
+            </div>
+            <div class="col-md-10 col-xs-11">
+                <span class="text-info h3">###STUFF_ID_LABEL###</span>
+            </div>
+            <div class="col-md-1 col-xs-1"></div>
+        </div>
+	      <br />
+ 
+        <!--FAMILY_NAME-->
 	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -31,6 +47,8 @@
             <div class="col-md-1 col-xs-1"></div>
         </div>
 	      <br />
+
+        <!--GIVEN_NAME-->
 	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -42,6 +60,8 @@
 	          </div>
           </div>
 	      <br />
+
+        <!--EMAIL-->
 	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -53,6 +73,8 @@
 	         </div>
         </div>
 	      <br />
+
+        <!--TEL1-->
  	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -64,6 +86,8 @@
 	          </div>
           </div>
 	      <br />
+
+        <!--TEL2-->
  	      <div class="row">
               <div class="col-md-1 hidden-xs">
                   <label class="control-label">
@@ -75,6 +99,8 @@
 	          </div>
         </div>
 	      <br />
+
+        <!--ADMIN-->
 	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
@@ -89,5 +115,14 @@
 
     </div>
 </div>
+
+<script>
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+</script>
+
 <!--body-->
 <!--</html>-->
