--- a/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
 
         <!--Header Info-->
@@ -24,8 +24,22 @@
 			      <input type="hidden" name="ACTION" value="COMPLETE" />
 			      <input type="hidden" name="REST" value="PUT" />
 			      <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
-			      <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
-            
+
+             <!--STUFF_ID-->
+	          <div class="row">
+                <div class="col-md-1 hidden-xs">
+                    <label class="control-label">
+                        <i class="glyphicon glyphicon-user"></i>
+                    </label>
+                </div>
+                <div class="col-md-10 col-xs-11">
+                    <span class="text-info h3">###STUFF_ID###</span>
+                </div>
+                <div class="col-md-1 col-xs-1"></div>
+	            <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+            </div>
+	          <br />
+           
             <!--FAMILY_NAME-->
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
@@ -140,5 +154,14 @@
 	      </form>
     </div>
 </div>
+
+<script>
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+</script>
+
 <!--</body>-->
 <!--</html>-->
