--- a/APPLI/STUFF/EDIT/HTML/INPUT.HTML
+++ b/APPLI/STUFF/EDIT/HTML/INPUT.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
 
         <!--Header Info-->
@@ -17,32 +17,47 @@
         </div>
         <!--ERROR MESSAGE-->
         <div class="col-md-10 lbl-header-info">
-            <span class="label label-danger ###FAMILY_NAME_ISNULL###">FAMILY NAMEに値がありません。 </span>
-            <span class="label label-danger ###FAMILY_NAME_LENGTH###">FAMILY NAMEは2文字以上必要です。 </span>
-            <span class="label label-danger ###GIVEN_NAME_ISNULL###">GIVEN NAMEに値がありません。</span>
-            <span class="label label-danger ###GIVEN_NAME_LENGTH###">GIVEN NAMEは2文字以上必要です。 </span>
-            <span class="label label-danger ###EMAIL_ISNULL###">EMAILに値がありません。</span>
-            <span class="label label-danger ###EMAIL_DUPLICATE###">EMAILが既に使用されています。</span>
-            <span class="label label-danger ###TEL1_ISNULL###">Tel1に値がありません。</span>
-            <span class="label label-danger ###TEL1_MATCH###">Tel1はハイフン付きで入力してください。</span>
-            <span class="label label-danger ###TEL1_NUMERIC###">Tel1にハイフンと数字以外が入力されています。</span>
-            <span class="label label-danger ###TEL2_MATCH###">Tel2はハイフン付きで入力してください。</span>
-            <span class="label label-danger ###TEL2_NUMERIC###">Tel2にハイフンと数字以外が入力されています。</span>
-            <span class="label label-danger ###PASSWORD_ISNULL###">PASSWORDに値がありません。</span>
-            <span class="label label-danger ###PASSWORD_LENGTH###">PASSWORDは8文字以上必要です。</span>
-            <span class="label label-danger ###PW_CONFIRM_ISNULL###">PW CONFIRMATIONに値がありません。</span>
-            <span class="label label-danger ###PW_CONFIRM_COMPARE###">PW CONFIRMATIONの値がPASSWORDと異なっています。</span>
+            <span class="fade-in label label-danger ###FAMILY_NAME_ISNULL###">FAMILY NAMEに値がありません。 </span>
+            <span class="fade-in label label-danger ###FAMILY_NAME_LENGTH###">FAMILY NAMEは2文字以上必要です。 </span>
+            <span class="fade-in label label-danger ###GIVEN_NAME_ISNULL###">GIVEN NAMEに値がありません。</span>
+            <span class="fade-in label label-danger ###GIVEN_NAME_LENGTH###">GIVEN NAMEは2文字以上必要です。 </span>
+            <span class="fade-in label label-danger ###EMAIL_ISNULL###">EMAILに値がありません。</span>
+            <span class="fade-in label label-danger ###EMAIL_DUPLICATE###">EMAILが既に使用されています。</span>
+            <span class="fade-in label label-danger ###TEL1_ISNULL###">Tel1に値がありません。</span>
+            <span class="fade-in label label-danger ###TEL1_MATCH###">Tel1はハイフン付きで入力してください。</span>
+            <span class="fade-in label label-danger ###TEL1_NUMERIC###">Tel1にハイフンと数字以外が入力されています。</span>
+            <span class="fade-in label label-danger ###TEL2_MATCH###">Tel2はハイフン付きで入力してください。</span>
+            <span class="fade-in label label-danger ###TEL2_NUMERIC###">Tel2にハイフンと数字以外が入力されています。</span>
+            <span class="fade-in label label-danger ###PASSWORD_ISNULL###">PASSWORDに値がありません。</span>
+            <span class="fade-in label label-danger ###PASSWORD_LENGTH###">PASSWORDは8文字以上必要です。</span>
+            <span class="fade-in label label-danger ###PW_CONFIRM_ISNULL###">PW CONFIRMATIONに値がありません。</span>
+            <span class="fade-in label label-danger ###PW_CONFIRM_COMPARE###">PW CONFIRMATIONの値がPASSWORDと異なっています。</span>
         </div>
     </div>
     <br> 
 
 
-        <!--INPUT-->
+    <!--INPUT-->
     <form action="/APP/STUFF/EDIT" method="POST">
 	      <input type="hidden" name="ACTION" value="CONFIRM" />
 	    	<input type="hidden" name="REST" value="PUT" />
 	    	<input type="hidden" name="ENC_ID" value="###ENC_ID###" />
-            
+        
+        <!--STUFF_ID-->
+	     <div class="row">
+           <div class="col-md-1 hidden-xs">
+               <label class="control-label">
+                   <i class="glyphicon glyphicon-user"></i>
+               </label>
+           </div>
+           <div class="col-md-10 col-xs-11">
+               <span class="text-info h3">###STUFF_ID###</span>
+           </div>
+           <div class="col-md-1 col-xs-1"></div>
+	       <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
+       </div>
+	     <br />
+ 
         <!--FAMILY_NAME-->
         <div class="row">
            <div class="col-md-1 hidden-xs">
@@ -204,6 +219,41 @@
 </div>
 
 <script>
+
+    //Validation Err MSGのOpacityを初期化
+    $(document).ready(function(){
+        validationErrMsgInit();
+    });
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+
+    //バリデーションエラーMSGの初期化
+    function validationErrMsgInit() {
+
+        //バリデーションエラー表示をクリア
+        $('input[type=text]').removeClass("label-danger");
+        $('.lbl-header-info .label').removeClass("show");
+        $('.lbl-header-info .label').addClass("hidden");
+        $('#info-msg').html("");
+
+        //バリデーションエラーMSGをフェードアウト
+        fadeInOut(0);
+   }
+
+    /*バリデーションエラーMSGをフェードアウト
+    *   引数 inout
+    *   フェードイン:1
+    *   フェードアウト:0
+    */
+    function fadeInOut(inout) {
+        $('.fade-in').not('#whole').each(function(){
+            $(this).css("opacity",inout );
+        });
+    }
+
 
     //管理者フラグの設定(sedでのchecked変換でうまく動作しないための逃げ)
     $(function() {
