--- a/APPLI/STUFF/NEW/HTML/COMPLETE.HTML
+++ b/APPLI/STUFF/NEW/HTML/COMPLETE.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
 
         <!--Header Info-->
@@ -18,77 +18,111 @@
             </div>
         </div>
         <br>
-
         <!--Contents-->
-	    <div class="row">
+
+        <!--STUFF_ID-->
+	      <div class="row">
             <div class="col-md-1 hidden-xs">
                 <label class="control-label">
                     <i class="glyphicon glyphicon-user"></i>
                 </label>
             </div>
             <div class="col-md-10 col-xs-11">
-                <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+                <span class="text-info h3">###STUFF_ID_LABEL###</span>
             </div>
             <div class="col-md-1 col-xs-1"></div>
         </div>
-	    <br />
-	    <div class="row">
-            <div class="col-md-1 hidden-xs">
-                <label class="control-label">
-                    <i class="glyphicon glyphicon-user"></i>
-                </label>
-            </div>
-            <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
-	        </div>
-        </div>
-	    <br />
-	    <div class="row">
-            <div class="col-md-1 hidden-xs">
-                <label class="control-label">
-                    <i class="glyphicon glyphicon-envelope"></i>
-                </label>
-            </div>
-            <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###EMAIL_LABEL###</span>
-	        </div>
-        </div>
-	    <br />
- 	    <div class="row">
-            <div class="col-md-1 hidden-xs">
-                <label class="control-label">
-                    <i class="glyphicon glyphicon-envelope"></i>
-                </label>
-            </div>
-            <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###TEL1_LABEL###</span>
-	        </div>
-        </div>
-	    <br />
- 	    <div class="row">
-            <div class="col-md-1 hidden-xs">
-                <label class="control-label">
-                    <i class="glyphicon glyphicon-envelope"></i>
-                </label>
-            </div>
-            <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###TEL2_LABEL###</span>
-	        </div>
-        </div>
-	    <br />
+	      <br />
  
-	    <div class="row">
-            <div class="col-md-1 hidden-xs">
-                <label class="control-label">
-                    <i class="glyphicon glyphicon-envelope"></i>
-                </label>
-            </div>
-            <div class="col-md-10 col-xs-11">
-	            <span class="text-info h3">###ADMIN_LABEL###</span>
-	        </div>
-        </div>
-	    <br />
+        <!--FAMILY_NAME-->
+	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-user"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+                  <span class="text-info h3">###FAMILY_NAME_LABEL###</span>
+              </div>
+              <div class="col-md-1 col-xs-1"></div>
+          </div>
+	      <br />
+
+        <!--GIVEN_NAME-->
+	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-user"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###GIVEN_NAME_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+
+        <!--EMAIL-->
+	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###EMAIL_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+
+        <!--TEL1-->
+ 	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###TEL1_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+
+        <!--TEL2-->
+ 	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###TEL2_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
+ 
+        <!--ADMIN-->
+	      <div class="row">
+              <div class="col-md-1 hidden-xs">
+                  <label class="control-label">
+                      <i class="glyphicon glyphicon-envelope"></i>
+                  </label>
+              </div>
+              <div class="col-md-10 col-xs-11">
+	              <span class="text-info h3">###ADMIN_LABEL###</span>
+	          </div>
+          </div>
+	      <br />
     </div>
 </div>
+
+<script>
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+</script>
+
+
 <!--body-->
 <!--</html>-->
