STUFF  key-value 対応

--- a/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/EDIT/HTML/CONFIRM.HTML
@@ -25,7 +25,7 @@
 			      <input type="hidden" name="REST" value="PUT" />
 			      <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
 
-             <!--STUFF_ID-->
+            <!--STUFF_ID-->
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -146,7 +146,7 @@
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
 	                    <button type="submit" class="btn btn-primary btn-md" />
-	                        <span class="glyphicon glyphicon-plus">COMPLETE</span>
+	                        <span class="">COMPLETE</span>
                         </button>
                     </div>
                 </div>
