--- a/APPLI/STUFF/DELETE/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/DELETE/HTML/CONFIRM.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
 
         <!--Header Info-->
@@ -25,6 +25,8 @@
             <input type="hidden" name="ACTION" value="COMPLETE" />
             <input type="hidden" name="REST" value="DELETE" />
 			      <input type="hidden" name="ENC_ID" value="###ENC_ID###" />
+
+            <!--STUFF_ID-->
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -38,6 +40,8 @@
 	              <input type="hidden" name="STUFF_ID" value="###STUFF_ID###" />
             </div>
 	          <br />
+
+            <!--FAMILY_NAME-->
 	          <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -50,6 +54,8 @@
                 <div class="col-md-1 col-xs-1"></div>
             </div>
 	          <br />
+
+            <!--GIVEN_NAME-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -61,6 +67,8 @@
                 </div>
             </div>
 	          <br />
+
+            <!--EMAIL-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -72,6 +80,8 @@
                 </div>
             </div>
 	          <br />
+
+            <!--TEL1-->
             <div class="row">
                  <div class="col-md-1 hidden-xs">
                      <label class="control-label">
@@ -83,6 +93,8 @@
                  </div>
             </div>
 	          <br />
+
+            <!--TEL2-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -94,6 +106,8 @@
                 </div>
             </div>
 	          <br />
+
+            <!--ADMIN-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                     <label class="control-label">
@@ -105,13 +119,15 @@
                 </div>
             </div>
 	          <br />
+
+            <!--DELETE BUTTON-->
             <div class="row">
                 <div class="col-md-1 hidden-xs">
                 </div>
                 <div class="col-md-10 col-xs-11">
                     <div class="form-group">
 	                    <button type="submit" class="btn btn-primary btn-md" />
-	                        <span class="glyphicon glyphicon-">Delete</span>
+	                        <span class="">DELETE</span>
                         </button>
                     </div>
                 </div>
@@ -119,5 +135,15 @@
 	      </form>
     </div>
 </div>
+
+<script>
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+</script>
+
+
 <!--</body>-->
 <!--</html>-->
