--- a/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
+++ b/APPLI/STUFF/NEW/HTML/CONFIRM.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-6 col-md-offset-1">
 
         <!--Header Info-->
@@ -138,5 +138,15 @@
 	      </form>
     </div>
 </div>
+
+<script>
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+
+</script>
+
 <!--</body>-->
 <!--</html>-->
