--- a/APPLI/STUFF/USERS/HTML/SHOW.HTML
+++ b/APPLI/STUFF/USERS/HTML/SHOW.HTML
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE html>-->
 <!--<html>-->
 <!--<body>-->
-<div class="container">
+<div id="whole" class="container fade-in" style="opacity:0">
     <div class="col-md-12 col-md-offset-1">
 
 <!--
@@ -66,5 +66,14 @@
         </div>
     </div>
 </div>
+
+<script>
+
+    //ロード時に全画面をフェードイン
+    $(window).on('load',function(){
+        $('#whole').css("opacity","1");
+    });
+</script>
+
 <!--</body>-->
 <!--</html>-->
