--- a/APPLI/STUFF/USERS/HTML/SHOW.HTML
+++ b/APPLI/STUFF/USERS/HTML/SHOW.HTML
@@ -50,10 +50,10 @@
                                 <td>%5</td>
                                 <td>%8</td>
                                 <td>
-                                    <a class="btn btn-default" href="%15">EDIT</a>
+                                    <a class="btn btn-warning" href="%15">EDIT</a>
                                 </td>
                                 <td>
-                                    <a class="btn btn-default" href="%16">DELETE</a>
+                                    <a class="btn btn-danger" href="%16">DELETE</a>
                                 </td>
                             </tr>
 <!--RECORDS-->
