--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -1,11 +1,15 @@
 <!--PARTS LISTS Records-->
+<!--<html>-->
 
 <!--RECORDS-->
 <tr id="edit-row-%2">
+    <!--順番-->
     <td>%1</td>
+    <!--ID-->
     <td>
         <span class="label label-default">%2</span>
     </td>
+    <!--カテゴリ-->
     <td>
         <div class="edit">
             <div class="form-group">
@@ -28,22 +32,22 @@
             </div>
         </div>
     </td>
+    <!--作業名-->
     <td>
         <input type="text" name="PARTS_NAME_%2" id="PARTS_NAME_%2" value="%5" class="form-control input-sm" />
     </td>
-    <td>
-        <input type="text" name="PARTS_NAME_JP_%2" id="PARTS_NAME_JP_%2" value="%6" class="form-control input-sm" />
-    </td>
+    <!--料金-->
     <td>
         <input type="number" name="PARTS_PRICE_%2" id="PARTS_PRICE_%2" value="%7" class="form-control input-sm" />
     </td>
+    <!--詳細ボタン-->
     <td>
-        <input type="text" name="PARTS_REMARKS_%2" id="PARTS_REMARKS_%2" value="%8" class="form-control input-sm" />
-    </td>
-    <td>
-        <a href="" class="btn btn-warning btn-sm" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
-    </td>
-    <td>
+        <!--詳細ボタン-->
+        <a class="btn btn-success btn-sm" id="PARTS_DETAIL_%2" onclick="detailParts(%2); return false;" >DETAIL</a>
+        <a class="btn btn-warning btn-sm" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
+        <!--更新ボタン-->
+        <a class="btn btn-warning btn-sm" id="PARTS_EDIT_%2" onclick="editParts(%2); return false;" >EDIT</a>
+        <!--削除ボタン-->
         <a class="btn btn-danger btn-sm" id="PARTS_DELETE_%2" onclick="deleteParts(%2); return false;" >DEL</a>
     </td>
 </tr>
