--- a/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/OPERATION_LIST/LISTS/HTML/RECORDS.HTML
@@ -40,12 +40,13 @@
     <td>
         <input type="number" name="OPERATION_PRICE_%2" id="OPERATION_PRICE_%2" value="%6" class="form-control input-sm" />
     </td>
-    <!--詳細ボタン-->
+    <!--ボタン-->
     <td>
+        <!--詳細ボタン-->
         <a class="btn btn-success btn-sm" id="OPERATION_DETAIL_%2" onclick="detailOperation(%2); return false;" >DETAIL</a>
-    <!--更新ボタン-->
+        <!--更新ボタン-->
         <a class="btn btn-warning btn-sm" id="OPERATION_EDIT_%2" onclick="editOperation(%2); return false;" >EDIT</a>
-    <!--削除ボタン-->
+        <!--削除ボタン-->
         <a class="btn btn-danger btn-sm" id="OPERATION_DELETE_%2" onclick="deleteOperation(%2); return false;" >DELETE</a>
     </td>
 </tr>
